--- a/src/css/navbar.css
+++ b/src/css/navbar.css
@@ -1,6 +1,11 @@
 .navbar-outer {
     min-width: 100%;
-    /* border: solid 1px black !important; */
+    /* border-bottom: solid 1px rgb(227, 227, 227); */
+    /* box-shadow: 0px 1px 1px #88888864; */
+    position: sticky;
+    top: 0;
+    background-color: var(--background-color);
+    z-index: 99;
 }
 
 .navbar-inner {
@@ -10,7 +15,7 @@
     margin: auto;
     max-width: 1000px;
     font-family: var(--primary-font);
-}
+}       
 
 .title {
     font-family: var(--accent-font);
@@ -40,10 +45,11 @@
     display: flex;
     align-items: center;
     list-style-type: none;
+    padding: 0;
 }
 
-.navLinks li {
-    margin-right: 30px;
+.navLinks li:not(.initial-list) {
+    margin-left: 30px;
 }
 
 .navLinks li a {
