--- a/src/css/description.css
+++ b/src/css/description.css
@@ -2,6 +2,7 @@
     min-width: 100%;
     position: relative;
     font-family: var(--primary-font);
+    margin-top: 50px;
 }
 
 .description-inner {
@@ -13,10 +14,41 @@
 }
 
 .description-paragraph {
-    line-height: 24px;
+    line-height: 25px;
 }
 
 .description-cards {
     display: grid;
     grid-template-columns: auto auto auto;
+    gap: 20px;
+    margin: 30px;
+}
+
+.description-card {
+    border: solid 1px;
+    padding: 10px;
+    border-radius: 10px;
+    line-height: 25px;
+    min-height: 400px;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: end;
+    color: white;
+    box-shadow: 0 10px 10px rgba(0, 0, 0, 0.3);
+}
+
+.network {
+    background-image: linear-gradient(rgba(0, 0, 0, 0.0), rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.8)), url('../assets/network.jpeg');
+}
+
+.light-bulb {
+    background-image: linear-gradient(rgba(0, 0, 0, 0.0), rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.8)), url('../assets/light-bulb.jpeg');
+}
+
+.collaboration {
+    background-image: linear-gradient(rgba(0, 0, 0, 0.0), rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.8)), url('../assets/collaboration.jpeg');
 }
