--- a/src/css/main.css
+++ b/src/css/main.css
@@ -21,6 +21,7 @@
 body {
     background-color: var(--background-color);
     position: relative;
+    color: var(--text-color);
 }
 
 .primary-button {
