--- a/src/css/navbar.css
+++ b/src/css/navbar.css
@@ -54,11 +54,16 @@
 
 .navLinks li a {
     text-decoration: none;
+    color: var(--text-color);
+}
+
+.navLinks li .active {
+    color: var(--accent-color);
 }
 
 .navLinks li a:hover {
     color: var(--accent-color);
-    font-weight: 500
+    /* font-weight: 500 */
 }
 
 .primary-button:hover {
