--- a/src/css/main.css
+++ b/src/css/main.css
@@ -22,6 +22,7 @@ body {
     background-color: var(--background-color);
     position: relative;
     color: var(--text-color);
+    margin: 0;
 }
 
 .primary-button {
