--- a/src/css/main.css
+++ b/src/css/main.css
@@ -10,9 +10,9 @@
 
 :root {
     --background-color: #FFFFFF;
-    --primary-color: #3A3A3A;
+    --primary-color: #1c1c1c;
     --accent-color: #2D89FF;
-    --text-color: #000000;  
+    --text-color: #0f0f0f;  
     --secondary-accent: #6EE7B7;
     --primary-font: "Work Sans", serif;
     --accent-font: "Raleway", serif;   
