--- a/src/Styles/hero.css
+++ b/src/Styles/hero.css
@@ -12,7 +12,7 @@
 .hero-inner {
     /* border: solid 1px; */
     min-height: 80vh;
-    background-image: url('../assets/hero-image2.png');
+    background-image: url('../Assets/hero-image2.png');
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
