--- a/src/Styles/filter.css
+++ b/src/Styles/filter.css
@@ -14,3 +14,24 @@
     max-width: 1000px;
     font-family: var(--primary-font);
 }
+
+.filter-dropdown {
+    padding: 10px 15px;
+    border: 1px solid var(--primary-color);
+    border-radius: 5px;
+    font-size: 15px; 
+    outline: none;
+    border-radius: 50px;
+}
+
+.filter-dropdown option {
+    padding: 10px;
+    cursor: pointer;
+    transition: background-color 0.3s;
+    font-size: 15px;
+}
+
+.filter-dropdown option:hover {
+    background-color: var(--accent-color);
+    color: #fff
+}
