--- a/src/Styles/navbar.css
+++ b/src/Styles/navbar.css
@@ -26,7 +26,7 @@
 
 .searchBar {
     padding: 10px 15px;
-    border: solid 1px var(--primary-color);
+    border: solid 2px #747474;
     border-radius: 50px;
     min-width: 250px;
 }
