added and styled lists cards on explore page

--- a/src/Styles/filter.css
+++ b/src/Styles/filter.css
@@ -1,6 +1,6 @@
 .filter-outer {
     min-width: 100%;
-    position: fixed;
+    position: sticky;
     top: 80px;
     background-color: var(--background-color);
     z-index: 99;
