--- a/src/Styles/cards.css
+++ b/src/Styles/cards.css
@@ -4,44 +4,21 @@
     text-align: left;
     border-radius: 10px;
     cursor: pointer;
+    display: flex;
+    flex-direction: column;
 }
 
 .card-title, .author {
     font-family: var(--accent-font);
 }
 
+.card-title {
+    margin-top: 0;
+}
+
 .card-description, .extra-details {
     font-size: 15px;
-}
-
-.category {
-    padding:  5px 10px;
-    background-color: var(--accent-color);
-    color: white;
-    border-radius: 5px;
-    width: fit-content;
-    font-size: 14px;
-}
-
-.tags {
-    display: flex;
-    flex-direction: row;
-    overflow-x: scroll;
-    -ms-overflow-style: none;
-    scrollbar-width: none;
-}
-
-.tag {
-    margin-right: 5px;
-    padding: 5px 10px;
-    background-color: lightblue;
-    border-radius: 5px;
-    min-width: fit-content;
-    font-size: 13px;
-}
-
-.tags::-webkit-scrollbar {
-    display: none;
+    /* margin: 0; */
 }
 
 .extra-details {
