--- a/src/Styles/explore.css
+++ b/src/Styles/explore.css
@@ -2,11 +2,11 @@
     min-width: 100%;
     position: relative;
     font-family: var(--primary-font);
-    margin-top: 80px;
+    /* margin-top: 80px; */
 }
 
 .ideas-section-inner {
-    margin: 50px auto;
+    margin: 30px auto;
     width: 1000px;
     position: relative;
     text-align: center;
@@ -14,10 +14,54 @@
 
 .card-grid {
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    gap: 20px;
+    grid-template-columns: repeat(3, minmax(0, 1fr));
+    grid-gap: 20px;
+}
+
+.author-name:hover {
+    text-decoration: underline;
+}
+
+.category {
+    padding: 5px 12px;
+    /* background-color: var(--accent-color); */
+    color: #ffffff;
+    border-radius: 15px;
+    width: fit-content;
+    font-size: 14px;
+    margin-right: 15px;
+    transition: 0.2s;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.category:hover {
+    opacity: 0.8;
+}
+
+.tags {
+    display: flex;
+    flex-direction: row;
+    overflow-x: scroll;
+    -ms-overflow-style: none;
+    scrollbar-width: none;
+}
+
+.tag {
+    margin-right: 5px;
+    padding: 5px 10px;
+    background-color: lightblue;
+    border-radius: 5px;
+    min-width: fit-content;
+    height: fit-content;
+    font-size: 13px;
+}
+
+.tags::-webkit-scrollbar {
+    display: none;
 }
 
 .list-view {
-    display: inline;
+    /* display: inline; */
 }
