--- a/src/Styles/navbar.css
+++ b/src/Styles/navbar.css
@@ -12,13 +12,19 @@
     justify-content: space-between;
     margin: auto;
     max-width: 1000px;
-    font-family: var(--primary-font);
+    font-family: var(--primary-font);   
+    padding: 10px 0px;
 }       
 
-.title {
+/* .title {
     font-family: var(--accent-font);
     color: var(--primary-color);
     cursor: pointer;
+} */
+
+.logo {
+    height: 40px;
+    /* width: fit-content; */
 }
 
 .searchBar {
