--- a/src/Styles/ideaeditor.css
+++ b/src/Styles/ideaeditor.css
@@ -30,11 +30,11 @@
     font-weight: 500;
 }
 
-.idea-form input, textarea {
+.idea-form input:not(.idea-tags), textarea, .tags-input {
     width: 100%;
-    padding: 10px 20px;
-    border: 3px solid var(--accent-color);
-    border-radius: 5px;
+    padding: 15px 20px;
+    border: 3px solid rgba(0, 0, 0, 0.5);
+    border-radius: 20px !important;
     font-size: 15px; 
     outline: none;
     border-radius: 10px;
@@ -45,8 +45,34 @@
     /* outline: solid 2px var(--accent-color); */
 }
 
-.idea-form input:focus, textarea:focus {
-    /* outline: solid 2px var(--accent-color); */
+.idea-form .tags-input {
+    display: flex;
+    align-items: center;
+    /* justify-content: space-between; */
+}
+
+.idea-form .tags-input > * {
+    /* flex:; */
+}
+
+.idea-form .idea-tags {
+    border: none;
+    min-width: 50%;
+    font-size: 15px; 
+    outline: none;
+    font-family: 'arial';
+}
+
+/* .idea-form .idea-tags:focus {
+    ou
+} */
+
+.idea-form input:not(.idea-tags):focus, textarea:focus {
+    outline: solid 3px var(--accent-color);
+}
+
+.idea-form .idea-title:not(:placeholder-shown) {
+    font-weight: 600;
 }
 
 .idea-form .idea-description {
@@ -54,11 +80,16 @@
 }
 
 .idea-form .idea-summary {
-    height: 600px;
-    margin-bottom: 80px;
-    border: solid 3px var(--accent-color);
+    height: 90vh;
+    /* margin-bottom: 80px; */
+    border: solid 3px rgba(0, 0, 0, 0.5);
     border-radius: 10px;
     overflow: hidden;
+}
+
+.idea-form .ql-editor:active .idea-summary{
+    border: solid 1px rgba(0, 0, 0, 0.5);
+    outline: solid 3px var(--accent-color);
 }
 
 .idea-form .idea-summary .ql-toolbar {
@@ -72,4 +103,8 @@
 
 .idea-form .idea-buttons .post-button{
     margin-right: 10px;
+}
+
+.idea-form .idea-buttons .save-as-draft-button{
+    background-color: rgb(30, 192, 247);
 }
