--- a/src/Styles/ideaeditor.css
+++ b/src/Styles/ideaeditor.css
@@ -8,7 +8,7 @@
     width: 1000px;
     position: relative;
     text-align: left;
-    padding: 50px 00px;
+    padding: 50px 50px;
     border-radius: 10px;
 }
 
@@ -24,7 +24,7 @@
 .idea-form input:not(.idea-tags), textarea, .tags-input {
     width: 100%;
     padding: 15px 20px;
-    border: 3px solid rgba(0, 0, 0, 0.5);
+    border: 2px solid rgba(0, 0, 0, 0.2);
     border-radius: 10px !important;
     font-size: 15px; 
     outline: none;
@@ -38,6 +38,7 @@
 .idea-form .tags-input {
     display: flex;
     align-items: center;
+    margin-bottom: 40px;
 }
 
 .idea-form .idea-tags {
@@ -62,13 +63,13 @@
 
 .idea-form .idea-summary {
     height: 90vh;
-    border: solid 3px rgba(0, 0, 0, 0.5);
+    border: 2px solid rgba(0, 0, 0, 0.2);
     border-radius: 10px;
     overflow: hidden;
 }
 
 .idea-form .ql-editor:active .idea-summary{
-    border: solid 1px rgba(0, 0, 0, 0.5);
+    /* border: solid 1px rgba(0, 0, 0, 0.5); */
     outline: solid 3px var(--accent-color);
 }
 
@@ -90,7 +91,7 @@
 }
 
 .idea-form .next-prev-buttons {
-    margin-top: 40px;
+    margin-top: 20px;
     display: flex;
     justify-content: space-between;
 }
@@ -101,4 +102,11 @@
     justify-content: center;
     max-width: 40px !important;
     height: 40px;
+}
+
+.page-one, .page-two, .page-three {
+    border: solid 2px rgba(0, 0, 0, 0.2);
+    box-shadow: 0 0 1px rgba(0, 0, 0, 0.2);
+    padding: 50px 30px;
+    border-radius: 10px;
 }
