--- a/src/Styles/main.css
+++ b/src/Styles/main.css
@@ -13,7 +13,7 @@
     --primary-color: #1c1c1c;
     --accent-color: #2D89FF;
     --text-color: #0f0f0f;  
-    --secondary-accent: #6EE7B7;
+    --secondary-accent: #20C997;
     --primary-font: "Work Sans", serif;
     --accent-font: "Raleway", serif;   
 }
