--- a/src/Styles/ideapreview.css
+++ b/src/Styles/ideapreview.css
@@ -4,6 +4,10 @@
     border-radius: 15px;
 }
 
+.idea-preview::-webkit-scrollbar {
+    display: none;
+}
+
 .idea-preview-title {
     margin-bottom: 30px;
     font-family: var(--accent-font);
@@ -17,9 +21,31 @@
 .idea-preview-summary {
     /* font-size: 17px; */
     line-height: 25px;
-    margin: 30px 0px
+    margin: 30px 0px;
+    overflow: scroll;
+    -ms-overflow-style: none;
+    scrollbar-width: none;
+}
+
+.idea-preview-summary::-webkit-scrollbar {
+    display: none;
 }
 
 .idea-preview-date-time {
     font-size: 15px;
+}
+.ql-align-center {
+    text-align: center !important;
+}
+
+.ql-align-left {
+    text-align: left !important;
+}
+
+.ql-align-right {
+    text-align: right !important;
+}
+
+.ql-align-justify {
+    text-align: justify !important;
 }
