--- a/src/Styles/explore.css
+++ b/src/Styles/explore.css
@@ -17,6 +17,11 @@
     grid-gap: 20px;
 }
 
+.card-grid a, .list-view a {
+    text-decoration: none;
+    color: var(--text-color);
+}
+
 .author-name:hover {
     text-decoration: underline;
 }
