--- a/src/Styles/ideapreview.css
+++ b/src/Styles/ideapreview.css
@@ -1,6 +1,5 @@
 .idea-preview {
     padding: 20px;
-    border: solid 1px rgba(0, 0, 0, 0.2);
     border-radius: 15px;
 }
 
@@ -32,7 +31,8 @@
 }
 
 .idea-preview-date-time {
-    font-size: 15px;
+    font-size: 13px;
+    margin-top: 20px;
 }
 .ql-align-center {
     text-align: center !important;
