--- a/src/Styles/explore.css
+++ b/src/Styles/explore.css
@@ -38,6 +38,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    font-weight: 500;
 }
 
 .category:hover {
@@ -59,13 +60,10 @@
     border-radius: 15px;
     min-width: fit-content;
     height: fit-content;
-    font-size: 13px;
+    font-size: 13px !important;
+    font-weight: 500;
 }
 
 .tags::-webkit-scrollbar {
     display: none;
-}
-
-.list-view {
-    /* display: inline; */
 }
