--- a/src/Styles/ideapreview.css
+++ b/src/Styles/ideapreview.css
@@ -1,5 +1,5 @@
 .idea-preview {
-    padding: 20px;
+    padding: 15px 30px;
     border-radius: 15px;
 }
 
@@ -20,10 +20,11 @@
 .idea-preview-summary {
     /* font-size: 17px; */
     line-height: 25px;
-    margin: 30px 0px;
+    /* margin: 30px 0px; */
     overflow: scroll;
     -ms-overflow-style: none;
     scrollbar-width: none;
+    /* height: 30vh; */
 }
 
 .idea-preview-summary::-webkit-scrollbar {
@@ -33,6 +34,8 @@
 .idea-preview-date-time {
     font-size: 13px;
     margin-top: 20px;
+    opacity: 0.6;
+    font-weight: 500;
 }
 .ql-align-center {
     text-align: center !important;
