--- a/frontend/src/Styles/lists.css
+++ b/frontend/src/Styles/lists.css
@@ -1,5 +1,4 @@
 .list-container {
-    margin-bottom: 20px;
     border-radius: 10px;
     text-align: left;
     padding: 20px;
@@ -24,10 +23,11 @@
 
 .list-description {
     font-size: 15px;
-    margin: 10px 0;
+    margin: 20px 0;
 }
 
 .category-tags {
     display: flex;
     align-items: end;
+    margin-top: 10px;
 }
