--- a/frontend/src/Styles/explore.css
+++ b/frontend/src/Styles/explore.css
@@ -43,6 +43,7 @@
     align-items: center;
     justify-content: center;
     font-weight: 500;
+    /* border: solid 3px rgba(0, 0, 0); */
 }
 
 .category:hover {
@@ -66,6 +67,7 @@
     height: fit-content;
     font-size: 12px !important;
     font-weight: 500;
+    border: solid 2px rgba(0, 0, 0, 0.5);
 }
 
 .tags::-webkit-scrollbar {
