handled filtration by time period

--- a/frontend/src/Styles/ideapreview.css
+++ b/frontend/src/Styles/ideapreview.css
@@ -61,6 +61,7 @@
     opacity: 0.6;
     font-weight: 500;
     margin: 5px 0 0 0;
+    font-family: var(--accent-font);
 }
 
 .idea-preview .extra-features {
