--- a/frontend/src/Styles/explore.css
+++ b/frontend/src/Styles/explore.css
@@ -3,12 +3,12 @@
     position: relative;
 }
 
-.ideas-section-inner {
+.ideas-section-inner, .exception {
     margin: 10px auto 30px auto;
     width: 1000px;
     position: relative;
     text-align: center;
-    min-height: 80vh;
+    /* min-height: 80vh; */
 }
 
 .card-grid {
@@ -72,4 +72,32 @@
 
 .tags::-webkit-scrollbar {
     display: none;
+}
+
+.exception {
+    min-height: 70vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+}
+
+.exception img {
+    height: 100px;
+    margin-bottom: 10px;
+    background-color: var(--primary-color);
+    border-radius: 10px;
+    padding: 10px;
+}
+
+.exception h3 {
+    font-family: var(--accent-font);
+    margin-bottom: 5px;
+}
+
+.exception span {
+    font-size: 15px;
+    font-family: var(--accent-font);
+    font-weight: 500;
+    margin: 5px 0;
 }
