--- a/frontend/src/Styles/main.css
+++ b/frontend/src/Styles/main.css
@@ -9,7 +9,7 @@
 }
 
 :root {
-    --background-color: #FFFFFF;
+    --background-color: #fafafa;
     --primary-color: #1c1c1c;
     --accent-color: #2D89FF;
     --text-color: #0f0f0f;  
