--- a/frontend/src/Styles/cards.css
+++ b/frontend/src/Styles/cards.css
@@ -1,5 +1,5 @@
 .card-container {
-    box-shadow: 0 1px 5px rgba(0, 0, 0, 0.2);
+    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.5);
     padding: 20px;
     text-align: left;
     border-radius: 10px;
@@ -7,6 +7,7 @@
     display: flex;
     flex-direction: column;
     min-height: 374px;
+    transition: 0.2s;
 }
 
 .card-title, .author {
