--- a/frontend/src/Styles/signin-signup.css
+++ b/frontend/src/Styles/signin-signup.css
@@ -1,20 +1,18 @@
-.login-outer {
+.signin-wrapper, .signup-wrapper {
     position: relative;
     height: 100vh;
     width: 100vw;
-    overflow: hidden
+    overflow: hidden;
 }
 
-.login-inner {
+.signin-form, .signup-form {
+    /* border: solid 1px; */
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
     text-align: center;
-}
-
-.login-form {
-    /* border: solid 1px; */
+    border-radius: 5px;
     padding: 40px 30px;
     box-shadow: 0px 1px 20px rgba(0, 0, 0, 0.1);
 }
@@ -28,13 +26,25 @@
     color: var(--accent-color);
 }
 
-.login-form > input:not(.show-password) {
+.signin-form > input:not(.show-password), .signup-form > input:not(.show-password) {
     padding: 15px 20px;
     width: 350px;
     margin-bottom: 30px;
     border-radius: 5px;
     border: solid 1px rgba(0, 0, 0, 0.1);   
     min-width: 300px;
+    font-family: var(--primary-font);
+}
+
+.signin-form > input:focus, .signup-form > input:focus {
+    outline: 2px solid var(--accent-color);
+}
+
+.error {
+    color: red;
+    font-size: 14px;
+    margin: 0;
+    margin-bottom: 10px;
 }
 
 .password-options {
@@ -42,6 +52,12 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
+}
+
+.show-password {
+    height: 15px;
+    width: 15px;
+    cursor: pointer;
 }
 
 .password-options a {
@@ -54,18 +70,18 @@
     text-decoration: underline;
 }
 
-.login-button {
+.signin-button, .signup-button {
     width: 100%;
     margin: 30px 0px;
     padding: 10px 15px !important;
     /* border-radius: 0px !important; */
 }
 
-.login-form p {
+.signin-form p, .signup-form p {
     font-size: 13px;
 }
 
-.signup-link {
+.signup-link, .signin-link {
     display: flex;
     align-items: center; 
     justify-content: center;
@@ -75,12 +91,12 @@
     border-radius: 5px;
 }
 
-.signup-link a {
+.signup-link a, .signin-link a {
     color: var(--accent-color);
     text-decoration: none;
     font-weight: 500;
 }
 
-.signup-link a:hover {
+.signup-link a:hover, .signin-link a:hover {
     text-decoration: underline;
 }
