--- a/frontend/src/Styles/signin-signup.css
+++ b/frontend/src/Styles/signin-signup.css
@@ -41,10 +41,14 @@
 }
 
 .error {
-    color: red;
+    color: rgb(219, 6, 6);
     font-size: 14px;
     margin: 0;
-    margin-bottom: 10px;
+    margin-bottom: 20px;
+    transition: 0.2s;
+    border-radius: 5px;
+    background-color: #ECDFDE;
+    font-weight: 400;
 }
 
 .password-options {
