--- a/frontend/src/Styles/navbar.css
+++ b/frontend/src/Styles/navbar.css
@@ -83,3 +83,29 @@
     border-radius: 50%;
     cursor: pointer;
 }
+
+.dropdown-navbar {
+    top: 50px;
+    right: 20%;
+    position: absolute;
+    display: block;
+    background-color: var(--background-color);
+    width: 200px;
+    padding: 20px;
+    box-shadow: 0 1px 5px rgba(0, 0, 0, 0.1);
+    border-radius: 5px;
+    /* min-height: fit-content; */
+}
+
+.dropdown-navbar .dropdown-list {
+    position: relative;
+    width: 100%;
+    box-shadow: none;
+    border-radius: 0;
+}
+
+.dropdown-navbar .dropdown-list li{
+    min-width: fit-content;
+    margin: 0;
+    justify-content: start;
+}
