--- a/frontend/src/Styles/navbar.css
+++ b/frontend/src/Styles/navbar.css
@@ -97,6 +97,13 @@
     /* min-height: fit-content; */
 }
 
+.dropdown-navbar .user-details {
+    display: flex;
+    align-items: center;
+    gap: 5px;
+    margin-bottom: 10px;
+}
+
 .dropdown-navbar .dropdown-list {
     position: relative;
     width: 100%;
@@ -108,4 +115,6 @@
     min-width: fit-content;
     margin: 0;
     justify-content: start;
+    gap: 10px;
+    border-radius: 5px;
 }
