--- a/frontend/src/Styles/completeprofile.css
+++ b/frontend/src/Styles/completeprofile.css
@@ -1,14 +1,16 @@
 .complete-profile-outer {
     min-width: 100%;
     position: relative;
+    overflow: hidden;
 }
 
 .complete-profile-inner {
     margin: auto;
     width: 1100px;
+    /* max-width: 1100px; */
     position: relative;
     text-align: left;
-    padding: 50px 50px;
+    padding: 15px 50px;
     font-family: var(--accent-font);
 }
 
@@ -17,7 +19,7 @@
 }
 
 .complete-profile-inner .steps {
-    margin: 33px 20px;
+    margin: 25px 20px;
 }
 
 .complete-profile-inner .steps .next-prev-buttons {
@@ -47,14 +49,14 @@
     border-radius: 50%;
     background-color: var(--accent-color);
     outline: dashed 5px #AAE1F5;
-    border: solid 10px var(--background-color);
+    border: solid 5px var(--background-color);
     cursor: pointer;
 }
 
 .user-fullname {
     font-family: var(--accent-font);
     text-align: center;
-    font-size: 30px;
+    font-size: 25px;
     font-weight: 600;
     border: none;
     background-color: transparent;
@@ -76,7 +78,7 @@
 
 .user-bio {
     margin-top: 30px;
-    height: 200px;
+    height: 150px;
 }
 
 .steps-forms {
