--- a/frontend/src/Styles/completeprofile.css
+++ b/frontend/src/Styles/completeprofile.css
@@ -37,7 +37,16 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    gap: 50px;
+    margin: 50px 0px;
+}
+
+.complete-profile-inner .steps .step-main .form-section {
+    display: flex;
+    align-items: center;
+    justify-content: center;
     flex-direction: column;
+    width: 100%;
 }
 
 .upload-profile-pic {
@@ -60,16 +69,20 @@
     font-weight: 600;
     border: none;
     background-color: transparent;
+    border-bottom: solid 1px;
+    max-width: fit-content;
 }
 
 .user-username {
     font-family: var(--accent-font);
     text-align: center;
-    font-size: 15px;
+    font-size: 20px;
     margin-top: 10px;
     font-weight: 500;
     border: none;
     background-color: transparent;
+    border-bottom: solid 1px;
+    max-width: fit-content;
 }
 
 .user-fullname:focus, .user-username:focus {
@@ -82,11 +95,11 @@
 }
 
 .steps-forms {
-    width: 50%;
+    width: 100%;
     padding: 10px 20px;
     display: flex;
     flex-direction: column;
-    gap: 20px;
+    gap: 30px;
 }
 
 .steps-forms label {
