--- a/frontend/src/Styles/completeprofile.css
+++ b/frontend/src/Styles/completeprofile.css
@@ -77,24 +77,27 @@
 .user-fullname {
     font-family: var(--accent-font);
     text-align: center;
-    font-size: 25px;
+    font-size: 20px;
     font-weight: 600;
     border: none;
     background-color: transparent;
-    /* border-bottom: solid 1px;
-    max-width: fit-content; */
+    cursor: text;
+    padding: 0px 10px 5px 10px;
+    field-sizing: content;
+    /* max-width: fit-content; */
 }
 
 .user-username {
     font-family: var(--accent-font);
     text-align: center;
-    font-size: 20px;
+    font-size: 15px;
     margin-top: 10px;
     font-weight: 500;
     border: none;
     background-color: transparent;
-    /* border-bottom: solid 1px;
-    max-width: fit-content; */
+    padding: 0px 10px 5px 10px;
+    field-sizing: content;
+    /* max-width: fit-content; */
 }
 
 .user-fullname:focus, .user-username:focus {
