feat: enhance user model with additional fields and update user details handling in API responses

--- a/frontend/src/Styles/completeprofile.css
+++ b/frontend/src/Styles/completeprofile.css
@@ -14,8 +14,21 @@
     font-family: var(--accent-font);
 }
 
+.complete-profile-inner .header {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
 .complete-profile-inner .header-title {
     color: var(--accent-color);
+}
+
+.complete-profile-inner .header-button {
+    display: flex;
+    gap: 10px;
+    cursor: pointer;
+    font-weight: 500;
 }
 
 .complete-profile-inner .steps {
