--- a/frontend/src/Styles/completeprofile.css
+++ b/frontend/src/Styles/completeprofile.css
@@ -119,6 +119,7 @@
 
 .user-bio {
     margin-top: 30px;
+    margin-bottom: 0;
     height: 200px;
 }
 
@@ -156,6 +157,8 @@
 .steps-forms input {
     width: 100%;
     padding: 12px 0px;
+    /* letter-spacing: 0px; */
+    font-family: var(--primary-font);
     border: none;
 }
 
