feat: add email and phone number validation in user details update logic and enhance error handling in CompleteProfile component

--- a/frontend/src/Styles/signin-signup.css
+++ b/frontend/src/Styles/signin-signup.css
@@ -49,6 +49,8 @@
     border-radius: 5px;
     background-color: #ECDFDE;
     font-weight: 400;
+    text-align: center;
+    font-family: var(--primary-font);
 }
 
 .password-options {
