--- a/frontend/src/Styles/completeprofile.css
+++ b/frontend/src/Styles/completeprofile.css
@@ -110,6 +110,7 @@
     background-color: transparent;
     padding: 0px 10px 5px 10px;
     field-sizing: content;
+    margin-bottom: 10px;
     /* max-width: fit-content; */
 }
 
@@ -118,7 +119,7 @@
 }
 
 .user-bio {
-    margin-top: 30px;
+    /* margin-top: 10px; */
     margin-bottom: 0;
     height: 200px;
 }
