--- a/frontend/src/Styles/completionmessage.css
+++ b/frontend/src/Styles/completionmessage.css
@@ -33,4 +33,5 @@
     font-size: 20px;
     transform: scale(1.05);
     box-shadow: 0px 4px 10px rgba(0, 123, 255, 0.3);
+    padding: 10px 30px;
 }
