feat: enhance Navbar and Profile page with improved styles and additional user bio information

--- a/frontend/src/Styles/main.css
+++ b/frontend/src/Styles/main.css
@@ -12,7 +12,7 @@
     --background-color: #fafafa;
     --primary-color: #1c1c1c;
     --accent-color: #2BB3E7;
-    --text-color: #0f0f0f;  
+    --text-color: #272626;  
     --secondary-accent: #20C997;
     --primary-font: "Work Sans", serif;
     --accent-font: "Raleway", serif;   
